# file-explorer

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: filecommands.rs  lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/homepage/: DiskUsage.tsx
