[package]
name = "app"
version = "0.1.0"
description = "Basic File Explorer"
authors = ["j1r4"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
sysinfo = "0.33.0"
walkdir = "2.5.0"
rayon = "1.10.0"
crossbeam-channel = "0.5.14"
